# pyo3_duckdb_pyarrow

./: .dockerignore  Cargo.toml  Dockerfile  pyproject.toml  readme.md  test-works.py  test.py
src/: lib.rs
